feat: add Dhan-first analytics foundation with gateway runtime and broker parity
Introduce gateway configuration, subscription coordination, options analytics APIs, replay studio, and consolidated broker adapters while removing legacy SDK mappers and unsupported port stubs.

Co-authored-by: Cursor <cursoragent@cursor.com>